feat: Add intelligent response format selection with language-aware infographics
- Added query classification to automatically detect visual vs text queries
- Visual responses (infographics) for: steps, schedules, symptoms, comparisons
- Text responses for: greetings, simple questions, clarifications
- Infographics generated in user's selected language (Hindi, Marathi, etc.)
- Added 'Show Text Version' fallback button for infographic responses
- Updated frontend to display infographics with click-to-expand
- Archived old app versions (app_old.py, app_v1.py) to archive/
- Updated README with new feature documentation
- Using gemini-3-pro-preview for text, gemini-3-pro-image-preview for images

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,13 @@ instance/
 # Uploads
 uploads/
 infographic_generator/
+
+# Archive (old versions)
+archive/
+
+# File search store cache
+.file_search_store.json
+
 # OS generated files
 .DS_Store
 .DS_Store?
