--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "functions": {
     "api/**": {
-      "runtime": "python3.11",
+      "runtime": "vercel-python@0.9.0",
       "maxDuration": 60
     }
   }
